[package]
name = "verobj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv = { version = "0.22.0", features = ["json-value"] }
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.133"
serde_json = "1.0"